# StarTrek

./: README.md
Client/: go.mod  main.go
Client/physics/: physics_wrapper.go
Client/protocol/: protocol.go
Graphic/: CMakeLists.txt  Makefile
Graphic/include/: app.hpp
Graphic/include/data/: rocket_data.hpp  simulation_state.hpp
Graphic/include/network/: protocol.hpp  ws_client.hpp
Graphic/include/scene/: camera.hpp  scene.hpp
Graphic/include/ui/: ui_manager.hpp
Graphic/src/: app.cpp  main.cpp
Graphic/src/data/: rocket_data.cpp  simulation_state.cpp
Graphic/src/network/: protocol.cpp  ws_client.cpp
Graphic/src/scene/: camera.cpp  scene.cpp
Graphic/src/ui/: ui_manager.cpp
Physics/: Makefile  rocket_physics.c  rocket_physics.h  test_physics.c
Server/: go.mod  main.go
Server/protocol/: protocol.go
